# ledger-partnership-tag

./: .flake8  .gitignore  Example.ledger  Pipfile  README.md  ledger-shadow.py  ledger_shadow.py  partnership_ledger.py  partnership_ledger_test.py  pyproject.toml
